С комментариями после разбора

--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
       </section>
     </main>
     <footer class="page-footer decorated-zone">
+      <!-- Заголовок 1-го уровня может быть только 1 раз. Здесь используем 2-го уровня -->
       <h2 class="footer-title site-title">focus</h2>
     </footer>
   </body>
